src/main/resources/static/stylesheet.css
body{
    /*background-image: url("background2.jpg");
    background-repeat: no-repeat;
    background-size: cover;*/
    font-family: sans-serif, Arial;
    font-size:18px;
    margin:0 auto;
    position: relative;
    background-image: url("background2.jpg");
    background-repeat: no-repeat;
    background-size: cover;
}

body:before {
    position: absolute;
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    background-color: rgba(0,0,0,0.1);
}

.content {
    position: relative;
}

.nav-container{
    padding: 5px;
    margin: 0 auto;
    text-align:center !important;
}

.navbar{
    background: hsla(143, 100%, 17%, 1);

    background: linear-gradient(90deg, hsla(143, 100%, 17%, 1) 0%, hsla(102, 27%, 43%, 1) 100%);

    background: -moz-linear-gradient(90deg, hsla(143, 100%, 17%, 1) 0%, hsla(102, 27%, 43%, 1) 100%);

    background: -webkit-linear-gradient(90deg, hsla(143, 100%, 17%, 1) 0%, hsla(102, 27%, 43%, 1) 100%);
}

.navbar-margin{
    margin-bottom: 15px;
}

.nav-link{
    color:darkgrey !important;

}

.nav-link:hover{
    color:white !important;
}

a{
    font-weight:bold;
}

.currentpage{

    color:white !important;
}

.chicken{
    max-width:40px;
    max-height:35px; !important;
}

h1{
    text-align:center;
    margin-left: 15px;
    margin-right: 15px;
    color:white;

}
h1 span{
    background: rgba(0, 151, 19, 0.4);
}
h2, h3 span{
    background: rgba(0, 151, 19, 0.4);
}


h2{
    text-align:center;
    margin-left: 15px;
    margin-right: 15px;
    color:white;
}

/* Set the size of the div element that contains the map */
#map {
    border: 1px solid #081c15;
    height: 400px;
    /* The height is 400 pixels */
    width: 100%;
    /* The width is the width of the web page */
}

.textBox{
    text-align: center;
    border: 1px solid #081c15;
    background-color: #b7e4c7;
    background-clip: padding-box ;
    width: 300px;
    height: 400px;
    padding: 40px;
    float: left;
    border-collapse: separate;
    border-spacing: 5px;
    border-radius: 12px;
}
.nolist{
    list-style: none !important;
}

/* Set the size of the div element that contains the map */
#map {
    height: 400px;
    /* The height is 400 pixels */
    width: 100%;
    /* The width is the width of the web page */
}

input[type=text], input[type=email]{
    width:391px;
}

.center{
    text-align:center;
    display: block;
    margin: auto;
}

.bold{
    font-weight: bold;
}
billede{
    border: 1px solid #081c15;
}

